* add possibility to fix the pixel size when calibrating 2D detectors
* new normalized Lorentzian function (NormLorentz1d)
* add fully asymmetric Pseudovoigt (different width and eta)
* remove unphysical variation of structure factor in kinematical 2-beam model
* new dynamical multibeam simulations based on the Darwin theory of dynamical
  diffraction
* include pip install guide into readme
* fix default wavelength selection in line cut functions.

v1.3.3, 2016-08-24

* fix packaging of the README.md file

v1.3.2, 2016-08-24

* call PowderIntensity from xu.Powder init routine
* fix problems in Crystal class when no lattice base is defined
* add parsing for simply chemical formulas in Amorphous definitions
* fix setup.py issue related to test installation
* fix bug in fuzzy gridders (first data point was not always treated correct!)
* added absorption_length method in all material classes

v1.3.1, 2016-05-19

* fix windows build due to lack of support of C99 in MSVC

v1.3.0, 2016-05-19

* change to setuptools for installation/package building
* major code cleanup (remove of duplicated code using Clone Digger)
  http://clonedigger.sourceforge.net
* bug fixes in Alloy initialization
* documentation building now requires numpydoc
* central version number in VERSION file (also available in the package after
  importing: import xrayutilities as xu; xu.__version__
* new examples using the new XRR and XRD simulation-code
* improve handling of SiGe and AlGaAs alloy: alloying on atomic level
* add relaxation parameter to PseudomoprhicMaterial to model partially relaxed
  material
* fix fwhm_exp for very narrow peaks
* fitting of x-ray reflectivity using the lmfit package.
  If you want to use this new feature you have to install lmfit
  see https://pypi.python.org/pypi/lmfit/
* new subpackage simpack for diffraction and reflectivity simulations from
  thin film samples. So far implemented are
  - a basic kinematical diffraction model